--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,10 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/law-db?useUnicode=true&characterEncoding=utf8
+#jdbc.url=jdbc:mysql://localhost:3306/law-db?useUnicode=true&characterEncoding=utf8
+#jdbc.username=root
+#jdbc.password=tiger
+jdbc.url=jdbc:mysql://60.210.40.196:25008/law-db?useUnicode=true&characterEncoding=utf8
 jdbc.username=root
-jdbc.password=tiger
+jdbc.password=Root@123!
 #定义初始连接数
 jdbc.initialSize=0
 #定义最大连接数
