--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -2,6 +2,9 @@ jdbc.driver=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://localhost:3306/law-db?useUnicode=true&characterEncoding=utf8
 #jdbc.username=root
 #jdbc.password=tiger
+#jdbc.url=jdbc:mysql://10.0.200.50:3306/law-db?useUnicode=true&characterEncoding=utf8
+#jdbc.username=root
+#jdbc.password=Root@123!
 jdbc.url=jdbc:mysql://60.210.40.196:25008/law-db?useUnicode=true&characterEncoding=utf8
 jdbc.username=root
 jdbc.password=Root@123!
