--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -19,3 +19,15 @@ jdbc.minIdle=1
 #定义最长等待时间
 jdbc.maxWait=60000
 
+#mongoDb
+mongo.ip=192.168.21.132
+mongo.port=27017
+mongo.hostport=192.168.21.132:27017
+mongo.connectionsPerHost=8
+mongo.threadsAllowedToBlockForConnectionMultiplier=100
+mongo.connectTimeout=1000
+mongo.maxWaitTime=1500
+mongo.autoConnectRetry=true
+mongo.socketKeepAlive=true
+mongo.socketTimeout=10000
+mongo.slaveOk=true
