--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,23 @@
             <artifactId>pagehelper</artifactId>
             <version>${com.github.pagehelper}</version>
         </dependency>
+        <dependency>
+            <groupId>com.shx.law</groupId>
+            <artifactId>sms</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <!-- mongo -->
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>2.14.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-mongodb</artifactId>
+            <version>1.5.4.RELEASE</version>
+        </dependency>
     </dependencies>
 
   <build>
