--- a/pom.xml
+++ b/pom.xml
@@ -176,10 +176,20 @@
             <artifactId>pagehelper</artifactId>
             <version>${com.github.pagehelper}</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.shx.law</groupId>-->
+            <!--<artifactId>sms</artifactId>-->
+            <!--<version>1.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
         <dependency>
-            <groupId>com.shx.law</groupId>
-            <artifactId>sms</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>com.aliyun</groupId>
+            <artifactId>aliyun-java-sdk-dysmsapi</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>aliyun-java-sdk-core</artifactId>
+            <version>3.2.3</version>
         </dependency>
         <!-- mongo -->
         <dependency>
