--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,11 @@
             <artifactId>spring-data-mongodb</artifactId>
             <version>1.5.4.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+        </dependency>
     </dependencies>
 
   <build>
